parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    COMMENT
    COMMENTBLOCK
    EOF
    POINT

Grammar

Rule 0     S' -> program
Rule 1     program -> function program
Rule 2     program -> external-declaration program
Rule 3     program -> empty
Rule 4     external-declaration -> type assignment SEMICOLON
Rule 5     external-declaration -> array_usage SEMICOLON
Rule 6     external-declaration -> type array_usage SEMICOLON
Rule 7     external-declaration -> macro_definition
Rule 8     external-declaration -> file_inclusion
Rule 9     declaration -> type assignment SEMICOLON
Rule 10    declaration -> assignment SEMICOLON
Rule 11    declaration -> function_call SEMICOLON
Rule 12    declaration -> array_usage SEMICOLON
Rule 13    declaration -> type array_usage SEMICOLON
Rule 14    assignment -> IDENTIFIER ASSIGN assignment
Rule 15    assignment -> IDENTIFIER ASSIGN function_call
Rule 16    assignment -> IDENTIFIER ASSIGN array_usage
Rule 17    assignment -> array_usage ASSIGN assignment
Rule 18    assignment -> IDENTIFIER COMMA assignment
Rule 19    assignment -> INTEGER COMMA assignment
Rule 20    assignment -> IDENTIFIER PLUS assignment
Rule 21    assignment -> IDENTIFIER MINUS assignment
Rule 22    assignment -> IDENTIFIER TIMES assignment
Rule 23    assignment -> IDENTIFIER DIVIDE assignment
Rule 24    assignment -> IDENTIFIER MODULUS assignment
Rule 25    assignment -> INTEGER PLUS assignment
Rule 26    assignment -> INTEGER MINUS assignment
Rule 27    assignment -> INTEGER TIMES assignment
Rule 28    assignment -> INTEGER DIVIDE assignment
Rule 29    assignment -> INTEGER MODULUS assignment
Rule 30    assignment -> APOST assignment APOST
Rule 31    assignment -> LPAREN assignment RPAREN
Rule 32    assignment -> MINUS assignment
Rule 33    assignment -> INTEGER PLUS PLUS
Rule 34    assignment -> IDENTIFIER PLUS PLUS
Rule 35    assignment -> array_usage PLUS PLUS
Rule 36    assignment -> INTEGER MINUS MINUS
Rule 37    assignment -> IDENTIFIER MINUS MINUS
Rule 38    assignment -> array_usage MINUS MINUS
Rule 39    assignment -> BOOLEAN
Rule 40    assignment -> FLOATINGPOINT
Rule 41    assignment -> INTEGER
Rule 42    assignment -> STRING
Rule 43    assignment -> IDENTIFIER
Rule 44    assignment -> LETTER
Rule 45    function_call -> IDENTIFIER LPAREN RPAREN
Rule 46    function_call -> IDENTIFIER LPAREN assignment RPAREN
Rule 47    type -> INT
Rule 48    type -> FLOAT
Rule 49    type -> CHAR
Rule 50    type -> VOID
Rule 51    array_usage -> IDENTIFIER LBRACKET assignment RBRACKET
Rule 52    function -> type IDENTIFIER LPAREN argument_list_option RPAREN compound_statement
Rule 53    argument_list_option -> argument_list
Rule 54    argument_list_option -> empty
Rule 55    argument_list -> argument_list COMMA argument
Rule 56    argument_list -> argument
Rule 57    argument -> type IDENTIFIER
Rule 58    compound_statement -> LBRACE statement_list RBRACE
Rule 59    statement_list -> statement_list statement
Rule 60    statement_list -> empty
Rule 61    statement -> iteration_statement
Rule 62    statement -> declaration
Rule 63    statement -> selection_statement
Rule 64    statement -> return-statement
Rule 65    iteration_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 66    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 67    iteration_statement -> DO compound_statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 68    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 69    selection_statement -> IF LPAREN expression RPAREN compound_statement
Rule 70    selection_statement -> IF LPAREN expression RPAREN statement
Rule 71    selection_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 72    selection_statement -> IF LPAREN expression RPAREN compound_statement ELSE statement
Rule 73    selection_statement -> IF LPAREN expression RPAREN statement ELSE compound_statement
Rule 74    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 75    return-statement -> RETURN SEMICOLON
Rule 76    return-statement -> RETURN expression SEMICOLON
Rule 77    expression -> expression EQUALS expression
Rule 78    expression -> expression LESS expression
Rule 79    expression -> expression GREATER expression
Rule 80    expression -> expression AND expression
Rule 81    expression -> expression OR expression
Rule 82    expression -> NOT expression
Rule 83    expression -> assignment
Rule 84    expression -> array_usage
Rule 85    macro_definition -> POUND DEFINE IDENTIFIER assignment
Rule 86    file_inclusion -> POUND INCLUDE LESS HEADER GREATER
Rule 87    file_inclusion -> POUND INCLUDE QUOTE HEADER QUOTE
Rule 88    empty -> <empty>

Terminals, with rules where they appear

AND                  : 80
APOST                : 30 30
ASSIGN               : 14 15 16 17
BOOL                 : 
BOOLEAN              : 39
CHAR                 : 49
COMMA                : 18 19 55
COMMENT              : 
COMMENTBLOCK         : 
DEFINE               : 85
DIVIDE               : 23 28
DO                   : 67 68
ELSE                 : 71 72 73 74
EOF                  : 
EQUALS               : 77
FLOAT                : 48
FLOATINGPOINT        : 40
GREATER              : 79 86
HEADER               : 86 87
IDENTIFIER           : 14 15 16 18 20 21 22 23 24 34 37 43 45 46 51 52 57 85
IF                   : 69 70 71 72 73 74
INCLUDE              : 86 87
INT                  : 47
INTEGER              : 19 25 26 27 28 29 33 36 41
LBRACE               : 58
LBRACKET             : 51
LESS                 : 78 86
LETTER               : 44
LPAREN               : 31 45 46 52 65 66 67 68 69 70 71 72 73 74
MINUS                : 21 26 32 36 36 37 37 38 38
MODULUS              : 24 29
NOT                  : 82
OR                   : 81
PLUS                 : 20 25 33 33 34 34 35 35
POINT                : 
POUND                : 85 86 87
QUOTE                : 87 87
RBRACE               : 58
RBRACKET             : 51
RETURN               : 75 76
RPAREN               : 31 45 46 52 65 66 67 68 69 70 71 72 73 74
SEMICOLON            : 4 5 6 9 10 11 12 13 67 68 75 76
STRING               : 42
TIMES                : 22 27
VOID                 : 50
WHILE                : 65 66 67 68
error                : 

Nonterminals, with rules where they appear

argument             : 55 56
argument_list        : 53 55
argument_list_option : 52
array_usage          : 5 6 12 13 16 17 35 38 84
assignment           : 4 9 10 14 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 46 51 83 85
compound_statement   : 52 65 67 69 71 71 72 73
declaration          : 62
empty                : 3 54 60
expression           : 65 66 67 68 69 70 71 72 73 74 76 77 77 78 78 79 79 80 80 81 81 82
external-declaration : 2
file_inclusion       : 8
function             : 1
function_call        : 11 15
iteration_statement  : 61
macro_definition     : 7
program              : 1 2 0
return-statement     : 64
selection_statement  : 63
statement            : 59 66 68 70 72 73 74 74
statement_list       : 58 59
type                 : 4 6 9 13 52 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (52) function -> . type IDENTIFIER LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> . type assignment SEMICOLON
    (5) external-declaration -> . array_usage SEMICOLON
    (6) external-declaration -> . type array_usage SEMICOLON
    (7) external-declaration -> . macro_definition
    (8) external-declaration -> . file_inclusion
    (88) empty -> .
    (47) type -> . INT
    (48) type -> . FLOAT
    (49) type -> . CHAR
    (50) type -> . VOID
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET
    (85) macro_definition -> . POUND DEFINE IDENTIFIER assignment
    (86) file_inclusion -> . POUND INCLUDE LESS HEADER GREATER
    (87) file_inclusion -> . POUND INCLUDE QUOTE HEADER QUOTE

    $end            reduce using rule 88 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    VOID            shift and go to state 13
    IDENTIFIER      shift and go to state 6
    POUND           shift and go to state 14

    program                        shift and go to state 1
    function                       shift and go to state 2
    external-declaration           shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5
    array_usage                    shift and go to state 7
    macro_definition               shift and go to state 8
    file_inclusion                 shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> function . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (52) function -> . type IDENTIFIER LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> . type assignment SEMICOLON
    (5) external-declaration -> . array_usage SEMICOLON
    (6) external-declaration -> . type array_usage SEMICOLON
    (7) external-declaration -> . macro_definition
    (8) external-declaration -> . file_inclusion
    (88) empty -> .
    (47) type -> . INT
    (48) type -> . FLOAT
    (49) type -> . CHAR
    (50) type -> . VOID
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET
    (85) macro_definition -> . POUND DEFINE IDENTIFIER assignment
    (86) file_inclusion -> . POUND INCLUDE LESS HEADER GREATER
    (87) file_inclusion -> . POUND INCLUDE QUOTE HEADER QUOTE

    $end            reduce using rule 88 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    VOID            shift and go to state 13
    IDENTIFIER      shift and go to state 6
    POUND           shift and go to state 14

    function                       shift and go to state 2
    program                        shift and go to state 15
    external-declaration           shift and go to state 3
    empty                          shift and go to state 4
    type                           shift and go to state 5
    array_usage                    shift and go to state 7
    macro_definition               shift and go to state 8
    file_inclusion                 shift and go to state 9

state 3

    (2) program -> external-declaration . program
    (1) program -> . function program
    (2) program -> . external-declaration program
    (3) program -> . empty
    (52) function -> . type IDENTIFIER LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> . type assignment SEMICOLON
    (5) external-declaration -> . array_usage SEMICOLON
    (6) external-declaration -> . type array_usage SEMICOLON
    (7) external-declaration -> . macro_definition
    (8) external-declaration -> . file_inclusion
    (88) empty -> .
    (47) type -> . INT
    (48) type -> . FLOAT
    (49) type -> . CHAR
    (50) type -> . VOID
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET
    (85) macro_definition -> . POUND DEFINE IDENTIFIER assignment
    (86) file_inclusion -> . POUND INCLUDE LESS HEADER GREATER
    (87) file_inclusion -> . POUND INCLUDE QUOTE HEADER QUOTE

    $end            reduce using rule 88 (empty -> .)
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    VOID            shift and go to state 13
    IDENTIFIER      shift and go to state 6
    POUND           shift and go to state 14

    external-declaration           shift and go to state 3
    program                        shift and go to state 16
    function                       shift and go to state 2
    empty                          shift and go to state 4
    type                           shift and go to state 5
    array_usage                    shift and go to state 7
    macro_definition               shift and go to state 8
    file_inclusion                 shift and go to state 9

state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (52) function -> type . IDENTIFIER LPAREN argument_list_option RPAREN compound_statement
    (4) external-declaration -> type . assignment SEMICOLON
    (6) external-declaration -> type . array_usage SEMICOLON
    (14) assignment -> . IDENTIFIER ASSIGN assignment
    (15) assignment -> . IDENTIFIER ASSIGN function_call
    (16) assignment -> . IDENTIFIER ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . IDENTIFIER COMMA assignment
    (19) assignment -> . INTEGER COMMA assignment
    (20) assignment -> . IDENTIFIER PLUS assignment
    (21) assignment -> . IDENTIFIER MINUS assignment
    (22) assignment -> . IDENTIFIER TIMES assignment
    (23) assignment -> . IDENTIFIER DIVIDE assignment
    (24) assignment -> . IDENTIFIER MODULUS assignment
    (25) assignment -> . INTEGER PLUS assignment
    (26) assignment -> . INTEGER MINUS assignment
    (27) assignment -> . INTEGER TIMES assignment
    (28) assignment -> . INTEGER DIVIDE assignment
    (29) assignment -> . INTEGER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . INTEGER PLUS PLUS
    (34) assignment -> . IDENTIFIER PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . INTEGER MINUS MINUS
    (37) assignment -> . IDENTIFIER MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . BOOLEAN
    (40) assignment -> . FLOATINGPOINT
    (41) assignment -> . INTEGER
    (42) assignment -> . STRING
    (43) assignment -> . IDENTIFIER
    (44) assignment -> . LETTER
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET

    IDENTIFIER      shift and go to state 17
    INTEGER         shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    BOOLEAN         shift and go to state 24
    FLOATINGPOINT   shift and go to state 25
    STRING          shift and go to state 26
    LETTER          shift and go to state 27

    assignment                     shift and go to state 19
    array_usage                    shift and go to state 20

state 6

    (51) array_usage -> IDENTIFIER . LBRACKET assignment RBRACKET

    LBRACKET        shift and go to state 28


state 7

    (5) external-declaration -> array_usage . SEMICOLON

    SEMICOLON       shift and go to state 29


state 8

    (7) external-declaration -> macro_definition .

    INT             reduce using rule 7 (external-declaration -> macro_definition .)
    FLOAT           reduce using rule 7 (external-declaration -> macro_definition .)
    CHAR            reduce using rule 7 (external-declaration -> macro_definition .)
    VOID            reduce using rule 7 (external-declaration -> macro_definition .)
    IDENTIFIER      reduce using rule 7 (external-declaration -> macro_definition .)
    POUND           reduce using rule 7 (external-declaration -> macro_definition .)
    $end            reduce using rule 7 (external-declaration -> macro_definition .)


state 9

    (8) external-declaration -> file_inclusion .

    INT             reduce using rule 8 (external-declaration -> file_inclusion .)
    FLOAT           reduce using rule 8 (external-declaration -> file_inclusion .)
    CHAR            reduce using rule 8 (external-declaration -> file_inclusion .)
    VOID            reduce using rule 8 (external-declaration -> file_inclusion .)
    IDENTIFIER      reduce using rule 8 (external-declaration -> file_inclusion .)
    POUND           reduce using rule 8 (external-declaration -> file_inclusion .)
    $end            reduce using rule 8 (external-declaration -> file_inclusion .)


state 10

    (47) type -> INT .

    IDENTIFIER      reduce using rule 47 (type -> INT .)
    INTEGER         reduce using rule 47 (type -> INT .)
    APOST           reduce using rule 47 (type -> INT .)
    LPAREN          reduce using rule 47 (type -> INT .)
    MINUS           reduce using rule 47 (type -> INT .)
    BOOLEAN         reduce using rule 47 (type -> INT .)
    FLOATINGPOINT   reduce using rule 47 (type -> INT .)
    STRING          reduce using rule 47 (type -> INT .)
    LETTER          reduce using rule 47 (type -> INT .)


state 11

    (48) type -> FLOAT .

    IDENTIFIER      reduce using rule 48 (type -> FLOAT .)
    INTEGER         reduce using rule 48 (type -> FLOAT .)
    APOST           reduce using rule 48 (type -> FLOAT .)
    LPAREN          reduce using rule 48 (type -> FLOAT .)
    MINUS           reduce using rule 48 (type -> FLOAT .)
    BOOLEAN         reduce using rule 48 (type -> FLOAT .)
    FLOATINGPOINT   reduce using rule 48 (type -> FLOAT .)
    STRING          reduce using rule 48 (type -> FLOAT .)
    LETTER          reduce using rule 48 (type -> FLOAT .)


state 12

    (49) type -> CHAR .

    IDENTIFIER      reduce using rule 49 (type -> CHAR .)
    INTEGER         reduce using rule 49 (type -> CHAR .)
    APOST           reduce using rule 49 (type -> CHAR .)
    LPAREN          reduce using rule 49 (type -> CHAR .)
    MINUS           reduce using rule 49 (type -> CHAR .)
    BOOLEAN         reduce using rule 49 (type -> CHAR .)
    FLOATINGPOINT   reduce using rule 49 (type -> CHAR .)
    STRING          reduce using rule 49 (type -> CHAR .)
    LETTER          reduce using rule 49 (type -> CHAR .)


state 13

    (50) type -> VOID .

    IDENTIFIER      reduce using rule 50 (type -> VOID .)
    INTEGER         reduce using rule 50 (type -> VOID .)
    APOST           reduce using rule 50 (type -> VOID .)
    LPAREN          reduce using rule 50 (type -> VOID .)
    MINUS           reduce using rule 50 (type -> VOID .)
    BOOLEAN         reduce using rule 50 (type -> VOID .)
    FLOATINGPOINT   reduce using rule 50 (type -> VOID .)
    STRING          reduce using rule 50 (type -> VOID .)
    LETTER          reduce using rule 50 (type -> VOID .)


state 14

    (85) macro_definition -> POUND . DEFINE IDENTIFIER assignment
    (86) file_inclusion -> POUND . INCLUDE LESS HEADER GREATER
    (87) file_inclusion -> POUND . INCLUDE QUOTE HEADER QUOTE

    DEFINE          shift and go to state 30
    INCLUDE         shift and go to state 31


state 15

    (1) program -> function program .

    $end            reduce using rule 1 (program -> function program .)


state 16

    (2) program -> external-declaration program .

    $end            reduce using rule 2 (program -> external-declaration program .)


state 17

    (52) function -> type IDENTIFIER . LPAREN argument_list_option RPAREN compound_statement
    (14) assignment -> IDENTIFIER . ASSIGN assignment
    (15) assignment -> IDENTIFIER . ASSIGN function_call
    (16) assignment -> IDENTIFIER . ASSIGN array_usage
    (18) assignment -> IDENTIFIER . COMMA assignment
    (20) assignment -> IDENTIFIER . PLUS assignment
    (21) assignment -> IDENTIFIER . MINUS assignment
    (22) assignment -> IDENTIFIER . TIMES assignment
    (23) assignment -> IDENTIFIER . DIVIDE assignment
    (24) assignment -> IDENTIFIER . MODULUS assignment
    (34) assignment -> IDENTIFIER . PLUS PLUS
    (37) assignment -> IDENTIFIER . MINUS MINUS
    (43) assignment -> IDENTIFIER .
    (51) array_usage -> IDENTIFIER . LBRACKET assignment RBRACKET

    LPAREN          shift and go to state 32
    ASSIGN          shift and go to state 33
    COMMA           shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    MODULUS         shift and go to state 39
    SEMICOLON       reduce using rule 43 (assignment -> IDENTIFIER .)
    LBRACKET        shift and go to state 28


state 18

    (31) assignment -> LPAREN . assignment RPAREN
    (14) assignment -> . IDENTIFIER ASSIGN assignment
    (15) assignment -> . IDENTIFIER ASSIGN function_call
    (16) assignment -> . IDENTIFIER ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . IDENTIFIER COMMA assignment
    (19) assignment -> . INTEGER COMMA assignment
    (20) assignment -> . IDENTIFIER PLUS assignment
    (21) assignment -> . IDENTIFIER MINUS assignment
    (22) assignment -> . IDENTIFIER TIMES assignment
    (23) assignment -> . IDENTIFIER DIVIDE assignment
    (24) assignment -> . IDENTIFIER MODULUS assignment
    (25) assignment -> . INTEGER PLUS assignment
    (26) assignment -> . INTEGER MINUS assignment
    (27) assignment -> . INTEGER TIMES assignment
    (28) assignment -> . INTEGER DIVIDE assignment
    (29) assignment -> . INTEGER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . INTEGER PLUS PLUS
    (34) assignment -> . IDENTIFIER PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . INTEGER MINUS MINUS
    (37) assignment -> . IDENTIFIER MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . BOOLEAN
    (40) assignment -> . FLOATINGPOINT
    (41) assignment -> . INTEGER
    (42) assignment -> . STRING
    (43) assignment -> . IDENTIFIER
    (44) assignment -> . LETTER
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET

    IDENTIFIER      shift and go to state 41
    INTEGER         shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    BOOLEAN         shift and go to state 24
    FLOATINGPOINT   shift and go to state 25
    STRING          shift and go to state 26
    LETTER          shift and go to state 27

    assignment                     shift and go to state 40
    array_usage                    shift and go to state 42

state 19

    (4) external-declaration -> type assignment . SEMICOLON

    SEMICOLON       shift and go to state 43


state 20

    (6) external-declaration -> type array_usage . SEMICOLON
    (17) assignment -> array_usage . ASSIGN assignment
    (35) assignment -> array_usage . PLUS PLUS
    (38) assignment -> array_usage . MINUS MINUS

    SEMICOLON       shift and go to state 44
    ASSIGN          shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47


state 21

    (19) assignment -> INTEGER . COMMA assignment
    (25) assignment -> INTEGER . PLUS assignment
    (26) assignment -> INTEGER . MINUS assignment
    (27) assignment -> INTEGER . TIMES assignment
    (28) assignment -> INTEGER . DIVIDE assignment
    (29) assignment -> INTEGER . MODULUS assignment
    (33) assignment -> INTEGER . PLUS PLUS
    (36) assignment -> INTEGER . MINUS MINUS
    (41) assignment -> INTEGER .

    COMMA           shift and go to state 48
    PLUS            shift and go to state 49
    MINUS           shift and go to state 50
    TIMES           shift and go to state 51
    DIVIDE          shift and go to state 52
    MODULUS         shift and go to state 53
    SEMICOLON       reduce using rule 41 (assignment -> INTEGER .)
    RPAREN          reduce using rule 41 (assignment -> INTEGER .)
    APOST           reduce using rule 41 (assignment -> INTEGER .)
    RBRACKET        reduce using rule 41 (assignment -> INTEGER .)
    INT             reduce using rule 41 (assignment -> INTEGER .)
    FLOAT           reduce using rule 41 (assignment -> INTEGER .)
    CHAR            reduce using rule 41 (assignment -> INTEGER .)
    VOID            reduce using rule 41 (assignment -> INTEGER .)
    IDENTIFIER      reduce using rule 41 (assignment -> INTEGER .)
    POUND           reduce using rule 41 (assignment -> INTEGER .)
    $end            reduce using rule 41 (assignment -> INTEGER .)
    EQUALS          reduce using rule 41 (assignment -> INTEGER .)
    LESS            reduce using rule 41 (assignment -> INTEGER .)
    GREATER         reduce using rule 41 (assignment -> INTEGER .)
    AND             reduce using rule 41 (assignment -> INTEGER .)
    OR              reduce using rule 41 (assignment -> INTEGER .)


state 22

    (32) assignment -> MINUS . assignment
    (14) assignment -> . IDENTIFIER ASSIGN assignment
    (15) assignment -> . IDENTIFIER ASSIGN function_call
    (16) assignment -> . IDENTIFIER ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . IDENTIFIER COMMA assignment
    (19) assignment -> . INTEGER COMMA assignment
    (20) assignment -> . IDENTIFIER PLUS assignment
    (21) assignment -> . IDENTIFIER MINUS assignment
    (22) assignment -> . IDENTIFIER TIMES assignment
    (23) assignment -> . IDENTIFIER DIVIDE assignment
    (24) assignment -> . IDENTIFIER MODULUS assignment
    (25) assignment -> . INTEGER PLUS assignment
    (26) assignment -> . INTEGER MINUS assignment
    (27) assignment -> . INTEGER TIMES assignment
    (28) assignment -> . INTEGER DIVIDE assignment
    (29) assignment -> . INTEGER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . INTEGER PLUS PLUS
    (34) assignment -> . IDENTIFIER PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . INTEGER MINUS MINUS
    (37) assignment -> . IDENTIFIER MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . BOOLEAN
    (40) assignment -> . FLOATINGPOINT
    (41) assignment -> . INTEGER
    (42) assignment -> . STRING
    (43) assignment -> . IDENTIFIER
    (44) assignment -> . LETTER
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET

    IDENTIFIER      shift and go to state 41
    INTEGER         shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    BOOLEAN         shift and go to state 24
    FLOATINGPOINT   shift and go to state 25
    STRING          shift and go to state 26
    LETTER          shift and go to state 27

    assignment                     shift and go to state 54
    array_usage                    shift and go to state 42

state 23

    (30) assignment -> APOST . assignment APOST
    (14) assignment -> . IDENTIFIER ASSIGN assignment
    (15) assignment -> . IDENTIFIER ASSIGN function_call
    (16) assignment -> . IDENTIFIER ASSIGN array_usage
    (17) assignment -> . array_usage ASSIGN assignment
    (18) assignment -> . IDENTIFIER COMMA assignment
    (19) assignment -> . INTEGER COMMA assignment
    (20) assignment -> . IDENTIFIER PLUS assignment
    (21) assignment -> . IDENTIFIER MINUS assignment
    (22) assignment -> . IDENTIFIER TIMES assignment
    (23) assignment -> . IDENTIFIER DIVIDE assignment
    (24) assignment -> . IDENTIFIER MODULUS assignment
    (25) assignment -> . INTEGER PLUS assignment
    (26) assignment -> . INTEGER MINUS assignment
    (27) assignment -> . INTEGER TIMES assignment
    (28) assignment -> . INTEGER DIVIDE assignment
    (29) assignment -> . INTEGER MODULUS assignment
    (30) assignment -> . APOST assignment APOST
    (31) assignment -> . LPAREN assignment RPAREN
    (32) assignment -> . MINUS assignment
    (33) assignment -> . INTEGER PLUS PLUS
    (34) assignment -> . IDENTIFIER PLUS PLUS
    (35) assignment -> . array_usage PLUS PLUS
    (36) assignment -> . INTEGER MINUS MINUS
    (37) assignment -> . IDENTIFIER MINUS MINUS
    (38) assignment -> . array_usage MINUS MINUS
    (39) assignment -> . BOOLEAN
    (40) assignment -> . FLOATINGPOINT
    (41) assignment -> . INTEGER
    (42) assignment -> . STRING
    (43) assignment -> . IDENTIFIER
    (44) assignment -> . LETTER
    (51) array_usage -> . IDENTIFIER LBRACKET assignment RBRACKET

    IDENTIFIER      shift and go to state 41
    INTEGER         shift and go to state 21
    APOST           shift and go to state 23
    LPAREN          shift and go to state 18
    MINUS           shift and go to state 22
    BOOLEAN         shift and go to state 24
    FLOATINGPOINT   shift and go to state 25
    STRING          shift and go to state 26
    LETTER          shift and go to state 27

    assignment                     shift and go to state 55
    array_usage                    shift and go to state 42

state 24

    (39) assignment -> BOOLEAN .
